--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Резюме - Дастан</title>
+  <title> Мое резюме</title>
 </head>
 <body>
 
