--- a/index.html
+++ b/index.html
@@ -2,28 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title> Мое резюме</title>
+  <title> Картинки и ссылки</title>
 </head>
 <body>
-
-  <h1><b>Дастан</b></h1>
-
-  <h2><u>Обо мне</u></h2>
-  <p> Мне 24 года , я <i>начинающий веб-разработчик</i>, изучаю HTML, CSS и JavaScript.<br>
-  Хочу стать <mark>профессионалом</mark> в создании сайтов и веб-приложений.</p>
-
-  <h3><i>Образование</i></h3>
-  <p>Университет: <b>Казахский национальный университет им. аль-Фараби (КазНУ)</b><br>
-  Специальность: <i>Информационные технологии</i></p>
-
-  <h4>Навыки</h4>
-  <p> HTML (Основы) <br> CSS (В процесс) <bR> JavaScript (В дальнейшем)</p>
-
-  <h5>Хобби</h5>
-  <p><mark>Программирование</mark>, <i>спорт</i>, <i>музыка</i></p>
-
-  <h6>Контакты</h6>
-  <p> Телефон: <mark>+7 747 555 86 53</mark></p>
-
+<a href="https://ru.wikipedia.org/wiki/Creeper" target="_blank">Ссылка на крипер в новом окне</a>
 </body>
 </html>
