добавлены ссылки   на  изображения

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <div style="height: 2000px;background-color: orange;"></div>
 <h1 id="bottom">Самый низ</h1>
 
+<img src="/image.jpg"alt="Картинка">
+<img src="https://cdn.pixabay.com/photo/2023/05/02/10/35/avatar-7964945_640.png" alt="Картинка из интернета" width="300" height="200">
 </body>
 </html>
